# face_detection_service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: __main__.py  config.py  deps.py  pyproject.toml  schemas.py
backend/api/: endpoints.py
backend/detector/: __main__.py  config.py  deps.py  schemas.py
backend/detector/api/: __init__.py  endpoints.py
backend/detector/tasks/: app_worker.py  tasks.py  yolo.py
backend/detector/templates/: home.html
backend/detector/utils/: __init__.py  tasks.py
backend/tasks/: __init__.py  app_worker.py  tasks.py  yolo.py
backend/utils/: __init__.py  tasks.py
celery_tasks/: __init__.py  app_worker.py  config.py  tasks.py  yolo.py
deploy/: docker-compose.yml
deploy/backend/: Dockerfile
deploy/detector/: Dockerfile
deploy/frontend/: Dockerfile
deploy/worker/: Dockerfile
detector/: __main__.py  config.py  endpoints.py
detector/api/: endpoints.py
detector/tasks/: __init__.py  tasks.py  yolo.py
docs/: model_test.ipynb
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: PredictedImage.vue  Sidebar.vue  UploadImage.vue
frontend/src/router/: index.js
frontend/src/views/: HistoryImage.vue  HomeImage.vue
