[tool.poetry]
name = "face-detection-service"
version = "0.1.0"
description = ""
authors = ["a.kazachinskiy <kazachinskii.a@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
celery = "^5.3.1"
pika = "^1.3.2"
python-multipart = "^0.0.6"
torch = "^2.0.1"
torchvision = "^0.15.2"
fastapi = "^0.99.0"
matplotlib = "^3.7.1"
redis = "^4.6.0"
opencv-python = "^4.8.0.74"
pydantic = "1.10.10"
sqlalchemy = "^2.0.17"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
jupyter = "^1.0.0"



[tool.poetry.group.backend.dependencies]
torch = "^2.0.1"
torchvision = "^0.15.2"
uvicorn = "^0.22.0"
fastapi = "^0.99.0"
python-multipart = "^0.0.6"
pika = "^1.3.2"
celery = "^5.3.1"
matplotlib = "^3.7.1"
redis = "^4.6.0"
opencv-python = "^4.8.0.74"


[tool.poetry.group.worker.dependencies]
celery = "^5.3.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
pika = "^1.3.2"
opencv-python = "^4.8.0.74"
uvicorn = "^0.22.0"
redis = "^4.6.0"
pydantic = "1.10.10"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
pillow = "^10.0.0"


[tool.poetry.group.frontend.dependencies]
fastapi = "^0.99.1"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# PYTEST

[tool.pytest]
addopts = "--cov=detector --cov-report html:coverage-report-html --cov-fail-under=60"
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __unicode__",
]
show_missing = true
skip_empty = true
omit = [
  "*/__init__.py",
  "*/repositories/*",
  "*/migrations/__main__.py",
  "*/core/logging/*"
]

[tool.coverage.html]
directory = "pytest-cov-report"

[tool.coverage.run]
branch = true
concurrency = ['thread', 'greenlet']

[tool.pytest.ini_options]
asyncio_mode = "auto"

# LINTERS

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]
ignore-paths=["matcher.db.migrations"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for backend routes)
  "C0103",  # invalid-name (for pydatic settings)
  "I1101",  # c-extension-no-member
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
profile = "black"
known_local_folder = "matcher"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
